--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lookdaluv-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://NicolasCarriman.github.io/timetraveler",
   "dependencies": {
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
@@ -26,6 +27,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy" : "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
